--- a/Models/Diffusion/2025.02.26_MegaTTS3.md
+++ b/Models/Diffusion/2025.02.26_MegaTTS3.md
@@ -54,23 +54,23 @@ Audio samples are available at https://sditdemo.github.io/sditdemo/.
 
 <table><tr><td width="50%">
 
-In recent years, neural codec language models[^01], [^02], [^03], [^04] and large-scale diffusion models [^05], [^06], [^07], [^08], [^09], [^10], [^11] have brought considerable advancements to the field of speech synthesis.
+In recent years, neural codec language models (**VALL-E**[^01], **SPEAR-TTS**[^02], **ELLA-V**[^03], **RALL-E**[^04]) and large-scale diffusion models (**NaturalSpeech2**[^05], **Voicebox**[^06], **DiTTo-TTS**[^07], **E2 TTS**[^08], **NaturalSpeech3**[^09], **SimpleSpeech**[^10], **SimpleSpeech2**[^11]) have brought considerable advancements to the field of speech synthesis.
 Unlike traditional text-to-speech (TTS) systems[^12], [^13], [^14], [^15], [^16], [^17], [^18], these models are trained on large-scale, multi-domain speech corpora, which contributes to notable improvements in the naturalness and expressiveness of synthesized audio.
 Given only seconds of speech prompt, they can synthesize identity-preserving speech in a zero-shot manner.
 
 To generate high-quality speech with clear and expressive pronunciation, a TTS model must establish an alignment mapping from text to speech signals[^15], [^19].
 However, from the perspective of speech-text alignment, current solutions suffer from the following issues:
 
-- **Models with implicit speech-text alignment** achieve the soft alignment paths through attention mechanisms[^01], [^20], [^21].
+- **Models with implicit speech-text alignment** achieve the soft alignment paths through attention mechanisms (**VALL-E**[^01], [^20], [^21]).
 These models can be categorized into:
 (1) autoregressive codec language models (AR LM), which are inefficient and lack robustness.
-The lengthy discrete speech codes, which typically require a bit rate of 1.5 kbps[^22], [^23], impose a significant burden on these autoregressive language models;
-(2) diffusion-based models without explicit duration modeling[^07], [^08], [^24], [^25], [^26], [^10], [^11], which significantly speeds up the speech generation process.
+The lengthy discrete speech codes, which typically require a bit rate of 1.5 kbps (**DAC**[^22], [^23]), impose a significant burden on these autoregressive language models;
+(2) diffusion-based models without explicit duration modeling (**DiTTo-TTS**[^07], **E2 TTS**[^08], [^24], [^25], [^26], **SimpleSpeech**[^10], **SimpleSpeech2**[^11]), which significantly speeds up the speech generation process.
 However, when compared with methods that adopt forced alignment, these models exhibit a decline in speech intelligibility.
 Besides, these methods cannot provide fine-grained control over the duration of specific pronunciations and can only adjust the overall speech rate.
 
 - **Predefined alignment-based methods** have prosodic naturalness constraints of forced alignments.
-During training, alignment paths[^27], [^15] are directly introduced into their models[^06], [^05], [^09] to reduce the complexity of text-to-speech generation, which achieves higher intelligibility.
+During training, alignment paths[^27], [^15] are directly introduced into their models **Voicebox**[^06], **NaturalSpeech2**[^05], **NaturalSpeech3**[^09] to reduce the complexity of text-to-speech generation, which achieves higher intelligibility.
 Nevertheless, they suffer from the following limitations:
 (1) predefined alignments constrain the model's search space to produce more natural-sounding speech[^28], [^20];
 (2) the overall naturalness is highly dependent on the performance of duration models.
@@ -100,14 +100,14 @@ We also visualize the attention matrices across various layers of ***MegaTTS3***
 
 **Zero-Shot TTS**
 
-Zero-shot TTS[^30], [^01], [^02], [^05], [^06], [^31], [^32], [^07], [^33], [^34], [^09], [^35], [^36] aims to synthesize unseen voices with speech prompts.
+Zero-shot TTS[^30], **VALL-E**[^01], **SPEAR-TTS**[^02], **NaturalSpeech2**[^05], **Voicebox**[^06], [^31], [^32], **DiTTo-TTS**[^07], [^33], [^34], **NaturalSpeech3**[^09], [^35], [^36] aims to synthesize unseen voices with speech prompts.
 Among them, neural codec language models[^20] are the first that can autoregressively synthesize speech that rivals human recordings in naturalness and expressiveness.
 However, they still face several challenges, such as the lossy compression in discrete audio tokenization and the time-consuming nature of autoregressive generation.
-To address these issues, some subsequent works explore solutions based on continuous vectors and non-autoregressive diffusion models[^05], [^06], [^07], [^08], [^10], [^11], [^36].
+To address these issues, some subsequent works explore solutions based on continuous vectors and non-autoregressive diffusion models (**NaturalSpeech2**[^05], **Voicebox**[^06], **DiTTo-TTS**[^07], **E2 TTS**[^08], **SimpleSpeech**[^10], **SimpleSpeech2**[^11], [^36].
 These works can be categorized into two main types:
-The first type directly models speech-text alignments using attention mechanisms without explicit duration modeling[^07], [^08].
+The first type directly models speech-text alignments using attention mechanisms without explicit duration modeling (**DiTTo-TTS**[^07], **E2 TTS**[^08]).
 Although these models perform well in terms of generation speed and quality, their robustness, especially in challenging cases, still requires enhancement.
-The second category[^05], [^06] utilizes predefined alignments to simplify alignment learning.
+The second category (**NaturalSpeech2**[^05], **Voicebox**[^06]) utilizes predefined alignments to simplify alignment learning.
 However, the search space of the generated speech of these models is limited by predefined alignments.
 To address these limitations, we propose a sparse alignment mechanism to reduce the constraints of predefined alignment-based methods while also reducing the difficulty of speech-text alignment learning.
 
@@ -148,7 +148,7 @@ Then, we provide detailed explanations of the sparse alignment mechanism, the pi
 
 As shown in Figure~\ref{fig:arch_overview} (a), given a speech waveform $s$, the VAE encoder $E$ encodes $s$ into a latent vector $z$, and the wave decoder $D$ reconstructs the waveform $x = D(z) = D(E(s))$.
 To reduce the computational burden of the model and simplify speech-text alignment learning, the encoder $E$ downsamples the waveform by a factor of $d$ in length.
-The encoder $E$ is similar to the one used in[^45], and the decoder $D$ is based on[^46].
+The encoder $E$ is similar to the one used in **WavTokenizer**[^45], and the decoder $D$ is based on[^46].
 We also adopt the multi-period discriminator (MPD), multi-scale discriminator (MSD), and multi-resolution discriminator (MRD) [^46], [^47] to model the high-frequency details in waveforms, which ensure perceptually high-quality reconstructions.
 The training loss of the speech compression model can be formulated as $\mathcal{L} = \mathcal{L}_{\mathrm{rec}} + \mathcal{L}_{\mathrm{KL}} + \mathcal{L}_{\mathrm{Adv}}$, where $\mathcal{L}_{\mathrm{rec}}=\|s-\hat{s}\|^2$ is the spectrogram reconstruction loss, $\mathcal{L}_{\mathrm{KL}}$ is the slight KL-penalty loss[^48], and $\mathcal{L}_{\mathrm{Adv}}$ is the LSGAN-styled adversarial loss[^49].
 After training, a one-second speech clip can be encoded into 25 vector frames.
@@ -290,7 +290,7 @@ We train ***MegaTTS3*** on the LibriLight[^55] dataset, which contains 60k hours
 All speech data are sampled at 16KHz.
 We transcribe the speeches using an internal ASR system and extract the predefined speech-text alignment using the external alignment tool[^56].
 We utilize three benchmark datasets:
-(1) the librispeech[^29] test-clean set following NaturalSpeech 3[^09] for zero-shot TTS evaluation;
+(1) the librispeech[^29] test-clean set following **NaturalSpeech3**[^09] for zero-shot TTS evaluation;
 (2) the LibriSpeech-PC test-clean set following F5-TTS[^36] for zero-shot TTS evaluation;
 (3) the L2-arctic dataset[^57] following[^37], [^44] for accented TTS evaluation.
 
@@ -313,9 +313,9 @@ The pre-training of ***MegaTTS3*** requires 800k steps and PeRFlow distillation 
 
 **Objective Metrics**
 
-(1) For zero-shot TTS, we evaluate speech intelligibility using the word error rate (WER) and speaker similarity using SIM-O[^09].
+(1) For zero-shot TTS, we evaluate speech intelligibility using the word error rate (WER) and speaker similarity using SIM-O (**NaturalSpeech3**[^09]).
 To measure SIM-O, we utilize the WavLM-TDCNN speaker embedding model\footnote{\url{https://github.com/microsoft/UniSpeech/tree/main/downstreams/speaker_verification}} to calculate the cosine similarity score between the generated samples and the prompt.
-As SIM-R[^06] is not comparable across baselines using different acoustic tokenizers, we recommend focusing on SIM-O in our experiments.
+As SIM-R (**Voicebox**[^06]) is not comparable across baselines using different acoustic tokenizers, we recommend focusing on SIM-O in our experiments.
 The similarity score is in the range of $\left[-1,1\right]$, where a higher value indicates greater similarity.
 In terms of WER, we use the publicly available HuBERT-Large model[^58], fine-tuned on the 960-hour LibriSpeech training set, to transcribe the generated speech.
 The WER is calculated by comparing the transcribed text to the original target text.
@@ -349,13 +349,13 @@ We tell the testers to focus on one corresponding aspect and ignore the other as
 
 We compare the zero-shot speech synthesis performance of ***MegaTTS3*** with 11 strong baselines, including:
 (1) VALL-E 2[^20];
-(2) VoiceBox[^06];
-(3) DiTTo-TTS[^07];
-(4) NaturalSpeech 3[^09];
+(2) **Voicebox**[^06];
+(3) **DiTTo-TTS**[^07];
+(4) **NaturalSpeech3**[^09];
 (5) CosyVoice[^21];
 (6) MaskGCT[^61];
 (7) F5-TTSa[^36];
-(8) E2 TTS[^08].
+(8) **E2 TTS**[^08].
 
 Explanation and details of the selected baseline systems are provided in Appendix~\ref{app:detail_zs_tts_baseline}.
 
@@ -428,9 +428,9 @@ Figure~\ref{exp:accent_confusion_matrices} shows that our ***MegaTTS3*** signifi
 First, we evaluate the reconstruction quality of the WaveVAE model, with results presented in Table~\ref{app:table_recon_speech_compression}.
 We report the objective metrics, including Perceptual Evaluation of Speech Quality (PESQ), Virtual Speech Quality Objective Listener (ViSQOL), and Mel-Cepstral Distortion (MCD).
 We select the following codec models as baselines:
-(1) EnCodec[^63], a representative and pioneering work in the field of speech codec;
-(2) DAC[^22], a high-bitrate audio codec model with high reconstruction quality;
-(3) WavTokenizer[^45], a low-bitrate speech codec model that focuses more on perceptual reconstruction quality;
+(1) **EnCodec**[^63], a representative and pioneering work in the field of speech codec;
+(2) **DAC**[^22], a high-bitrate audio codec model with high reconstruction quality;
+(3) **WavTokenizer**[^45], a low-bitrate speech codec model that focuses more on perceptual reconstruction quality;
 (4) X-codec2[^64], a low-bitrate speech codec model, leveraging the representations of a pre-trained model to further enhance overall quality.
 
 The results demonstrates that, despite applying higher compression rate, our solution achieves superior performance on various reconstruction metrics, such as MCD and ViSQOL.
@@ -450,7 +450,7 @@ This conclusion is also verified by a previous work[^07], which shows compact ta
 <table><tr><td width="50%">
 
 We test the following four settings:
-(1) w/FA, which replaces the sparse alignment in ***MegaTTS3*** with forced alignment used in [^06], [^05];
+(1) w/FA, which replaces the sparse alignment in ***MegaTTS3*** with forced alignment used in **Voicebox**[^06], **NaturalSpeech2**[^05];
 (2) w/o A., we do not use the predefined alignments and modeling the duration information implicitly;
 (3) w/ CFG, we use the standard CFG following the common practice in Diffusion-based TTS;
 (4) w/o CFG, we do not use the CFG mechanism.
@@ -491,7 +491,8 @@ Due to space constraints, further discussions are provided in the appendix.
 
 #### Model Configuration
 
-- **The WaveVAE model** consists of a VAE encoder, a wave decoder, and discriminators; The VAE encoder follows the architecture used in[^45].
+- **The WaveVAE model** consists of a VAE encoder, a wave decoder, and discriminators;
+The VAE encoder follows the architecture used in **WavTokenizer**[^45].
 The wave decoder consists of a convolutional upsampler and a Hifi-GAN decoder[^46].
 The latent channel size is set to 32.
 The weight of the KL loss is set to $1\times10^{-3}$, which only imposes a slight KL penalty on the learned latent.
@@ -546,7 +547,7 @@ We obtained the samples by contacting the authors.
 the challenge of text-speech alignment via cross-attention mechanisms with the prediction of the total length of speech representations.
 We directly obtain the results of objective evaluations from their paper.
 
-- **NaturalSpeech 3**[^09] designs a neural codec with factorized vector quantization (FVQ) to disentangle speech waveform into subspaces of content, prosody, timbre, and acoustic details and propose a factorized diffusion model to generate attributes in each subspace following its corresponding prompt.
+- **NaturalSpeech3**[^09] designs a neural codec with factorized vector quantization (FVQ) to disentangle speech waveform into subspaces of content, prosody, timbre, and acoustic details and propose a factorized diffusion model to generate attributes in each subspace following its corresponding prompt.
 We obtained the samples by contacting the authors.
 
 - **CosyVoice**[^21] utilizes an LLM for text-to-token generation and a conditional flow matching model for token-to-speech synthesis.
@@ -615,7 +616,7 @@ We paid \$8 to participants hourly and totally spent about \$500 on participant 
 
 Classifier-Free Guidance (CFG)[^54] is a technique that balances sample fidelity and mode coverage in diffusion models by combining the score estimates from both a conditional and an unconditional model.
 The unconditional model is trained alongside the conditional model by randomly omitting the conditioning variable $c$ with a certain probability, allowing the same model to provide score estimates for both $p(x)$ and $p(x|c)$.
-In large-scale zero-shot TTS, VoiceBox[^06] and NaturalSpeech 2[^05] achieve CFG mechanism by dropping the text and prompt speech features.
+In large-scale zero-shot TTS, **Voicebox**[^06] and **NaturalSpeech2**[^05] achieve CFG mechanism by dropping the text and prompt speech features.
 However, these works overlook that text and timbre should be controlled separately.
 Inspired by VoiceLDM[^66] that introduces separate control of environmental conditions and speech contents, a concurrent work[^67] proposes separately controlling the speaker fidelity and text intelligibility.
 However, this work is limited to improving the audio quality of TTS and does not explore the impact of CFG on accent.
@@ -664,7 +665,7 @@ Most prior studies of zero-shot TTS evaluate performances using the reading-styl
 In section~\ref{exp:ablation_studies}, we evaluate our model using the test sets collected from various sources, including:
 (1) CommonVoice[^70], a large voice corpus containing noisy speeches from various scenarios;
 (2) RAVDESS[^71], an emotional TTS dataset featuring 8 emotions and 2 emotional intensity.
-We follow[^09] and use strong-intensity samples to validate the model’s ability to handle emotional variance;
+We follow **NaturalSpeech3**[^09] and use strong-intensity samples to validate the model’s ability to handle emotional variance;
 (3) LibriTTS[^72], a high-quality speech corpus;
 (4) we collect samples from videos, movies, and animations to test whether our model can simulate timbres with distinctly strong individual characteristics.
 The test set consists of 40 audio samples extracted from each source.
@@ -764,7 +765,7 @@ The results are shown in the Table below.
 We compare MegaTTS 3 with the following baselines:
 (1) ``Ours w/ Forced Alignment'', we replace the sparse alignment with the forced alignment;
 (2) ``Ours w/ Standard CFG'', we replace the multi-condition CFG with standard CFG;
-(3) ``Ours w/ Standard AR Duration'', we replace the duration from F-LM with the duration from standard AR duration predictor following SimpleSpeech 2[^11].
+(3) ``Ours w/ Standard AR Duration'', we replace the duration from F-LM with the duration from standard AR duration predictor following **SimpleSpeech2**[^11].
 The results in Table~\ref{table:expressiveness_exp_libritest_all} show that sparse alignment brings significant improvements, and both multi-condition CFG and F-LM duration contribute positively to the performance.
 
 </td><td>
@@ -791,9 +792,9 @@ As shown, compared to the baseline systems, MegaTTS 3 does not exhibit a signifi
 <table><tr><td width="50%">
 
 The transcriptions on the LibriSpeech test-clean set are relatively simple since they come from audiobooks.
-To further indicate the speech intelligibility of different methods, we evaluate our model on the challenging set containing 100 difficult textual patterns from ELLA-V[^03].
+To further indicate the speech intelligibility of different methods, we evaluate our model on the challenging set containing 100 difficult textual patterns from **ELLA-V**[^03].
 Since the speech prompts used by ELLA-V are not publicly available, we randomly sample 3-second-long speeches in the LibriSpeech test-clean set as speech prompts.
-For this evaluation, we used the official checkpoint of F5-TTS[^36] and the E2-TTS[^08] inference API provided on F5-TTS's Hugging Face page.
+For this evaluation, we used the official checkpoint of F5-TTS[^36] and the **E2 TTS**[^08] inference API provided on F5-TTS's Hugging Face page.
 We employ Whisper-large-v3 for WER calculation.
 Based on the results presented in Table~\ref{table:cmp_hard_sentences}, our model shows stronger robustness against hard transcriptions.
 
@@ -851,17 +852,17 @@ All objective results reported are based on the average performance across multi
 
 ## References: 参考文献
 
-[^01]: wang2023neural
-[^02]: zhang2023speak
-[^03]: song2024ella
-[^04]: xin2024rall
-[^05]: shen2023naturalspeech
-[^06]: le2023Voicebox
-[^07]: lee2024ditto
-[^08]: eskimez2024e2
-[^09]: ju2024naturalspeech
-[^10]: yang2024simplespeech
-[^11]: yang2024simplespeech2
+[^01]: [VALL-E](../SpeechLM/ST2S/2023.01.05_VALL-E.md)
+[^02]: [SPEAR-TTS](../SpeechLM/ST2S/2023.02.07_SPEAR-TTS.md)
+[^03]: [ELLA-V](../SpeechLM/ST2S/2024.01.14_ELLA-V.md)
+[^04]: [RALL-E](../SpeechLM/ST2S/2024.04.04_RALL-E.md)
+[^05]: [NaturalSpeech2](2023.04.18_NaturalSpeech2.md)
+[^06]: [Voicebox](2023.06.23_Voicebox.md)
+[^07]: [DiTTo-TTS](2024.06.17_DiTTo-TTS.md)
+[^08]: [E2 TTS](2024.06.26_E2_TTS.md)
+[^09]: [NaturalSpeech3](2024.03.05_NaturalSpeech3.md)
+[^10]: [SimpleSpeech](2024.06.04_SimpleSpeech.md)
+[^11]: [SimpleSpeech2](2024.08.25_SimpleSpeech2.md)
 [^12]: shen2018natural
 [^13]: jia2018transfer
 [^14]: li2019neural
@@ -872,7 +873,7 @@ All objective results reported are based on the average performance across multi
 [^19]: tan2021survey
 [^20]: chen2024vall
 [^21]: du2024cosyvoice
-[^22]: kumar2024high
+[^22]: [DAC](../SpeechCodec/2023.06.11_Descript-Audio-Codec.md)
 [^23]: wu2024towards
 [^24]: lovelace2023simple
 [^25]: gao2023e3
@@ -895,7 +896,7 @@ All objective results reported are based on the average performance across multi
 [^42]: inoue2024macst
 [^43]: zhong2024accentbox
 [^44]: liu2024controllable
-[^45]: ji2024wavtokenizer
+[^45]: [WavTokenizer](../SpeechCodec/2024.08.29_WavTokenizer.md)
 [^46]: kong2020hifi
 [^47]: jang2021univnet
 [^48]: rombach2022high
@@ -913,7 +914,7 @@ All objective results reported are based on the average performance across multi
 [^60]: niebuhr2019measuring
 [^61]: wang2024maskgct
 [^62]: yang2024instructtts
-[^63]: defossez2022high
+[^63]: [EnCodec](../SpeechCodec/2022.10.24_EnCodec.md)
 [^64]: ye2025llasa
 [^65]: loizou2011speech
 [^66]: lee2024voiceldm
