--- a/Models/Diffusion/2025.02.26_MegaTTS3.md
+++ b/Models/Diffusion/2025.02.26_MegaTTS3.md
@@ -34,12 +34,11 @@
 
 <table><tr><td width="50%">
 
-While recent zero-shot text-to-speech (TTS) models have significantly improved speech quality and expressiveness,
-mainstream systems still suffer from issues related to speech-text alignment modeling:
+While recent zero-shot text-to-speech (TTS) models have significantly improved speech quality and expressiveness, mainstream systems still suffer from issues related to speech-text alignment modeling:
 (1) models without explicit speech-text alignment modeling exhibit less robustness, especially for hard sentences in practical applications;
 (2) predefined alignment-based models suffer from naturalness constraints of forced alignments.
 
-This paper introduces ***MegaTTS3***, a TTS system featuring an innovative sparse alignment algorithm that guides the latent diffusion transformer (DiT).
+This paper introduces ***MegaTTS3***, a TTS system featuring an innovative **sparse alignment algorithm** that guides the **latent diffusion transformer (DiT)**.
 Specifically, we provide sparse alignment boundaries to ***MegaTTS3*** to reduce the difficulty of alignment without limiting the search space, thereby achieving high naturalness.
 Moreover, we employ a multi-condition classifier-free guidance strategy for accent intensity adjustment and adopt the piecewise rectified flow technique to accelerate the generation process.
 Experiments demonstrate that ***MegaTTS3*** achieves state-of-the-art zero-shot TTS speech quality and supports highly flexible control over accent intensity.
@@ -47,6 +46,18 @@ Notably, our system can generate high-quality one-minute speech with only 8 samp
 Audio samples are available at https://sditdemo.github.io/sditdemo/.
 
 </td><td>
+
+尽管最近的零样本文本转语音模型已经显著提升了语音质量和表达力, 主流系统仍然受到和语音-文本对齐建模相关的问题的困扰:
+1. 无显式语音-文本对齐建模的模型表现出较低的鲁棒性, 尤其是在实际应用中遇到困难句子时;
+2. 基于预定义对齐的模型受到强制对齐的自然性约束.
+
+本文介绍了 ***MegaTTS3***, 一个采用创新的**稀疏对齐算法**来引导**潜在扩散 Transformer (DiT)** 的 TTS 系统.
+具体来说, 我们给 ***MegaTTS3*** 提供了稀疏对齐边界, 以减少对齐的困难, 且不限制搜索空间, 从而实现高自然度.
+此外, 我们采用了多条件无分类器引导策略来进行口音强度调节, 采用分段 Rectified Flow 技术来加速生成过程.
+
+实验表明 ***MegaTTS3*** 实现了最先进的零样本文本转语音质量, 并支持对口音强度的高度灵活的控制能力.
+值得注意的是, 我们的系统仅需 8 步采样就可以生成 1 分钟的高质量语音.
+音频示例可在 https://sditdemo.github.io/sditdemo/ 获得.
 
 </td></tr></table>
 
