--- a/Models/Diffusion/2025.02.26_MegaTTS3.md
+++ b/Models/Diffusion/2025.02.26_MegaTTS3.md
@@ -149,23 +149,51 @@ Then, we provide detailed explanations of the sparse alignment mechanism, the pi
 
 </td><td>
 
+本节介绍 ***MegaTTS3***.
+首先, 我们介绍 ***MegaTTS3*** 的架构设计.
+然后, 我们提供稀疏对齐机制, 分段 Rectified Flow 加速技术和多条件无分类器引导策略的详细解释.
+
 </td></tr></table>
 
-### Architecture
+### Architecture: 架构
 
 <table><tr><td width="50%">
 
 **WaveVAE**
 
-As shown in Figure~\ref{fig:arch_overview} (a), given a speech waveform $s$, the VAE encoder $E$ encodes $s$ into a latent vector $z$, and the wave decoder $D$ reconstructs the waveform $x = D(z) = D(E(s))$.
+As shown in Figure.01 (a), given a speech waveform $s$, the VAE encoder $E$ encodes $s$ into a latent vector $z$, and the wave decoder $D$ reconstructs the waveform $x = D(z) = D(E(s))$.
 To reduce the computational burden of the model and simplify speech-text alignment learning, the encoder $E$ downsamples the waveform by a factor of $d$ in length.
 The encoder $E$ is similar to the one used in **WavTokenizer**[^45], and the decoder $D$ is based on **HiFi-GAN**[^46].
 We also adopt the multi-period discriminator (MPD), multi-scale discriminator (MSD), and multi-resolution discriminator (MRD) (**HiFi-GAN**[^46], **UnivNet**[^47]) to model the high-frequency details in waveforms, which ensure perceptually high-quality reconstructions.
-The training loss of the speech compression model can be formulated as $\mathcal{L} = \mathcal{L}_{\mathrm{rec}} + \mathcal{L}_{\mathrm{KL}} + \mathcal{L}_{\mathrm{Adv}}$, where $\mathcal{L}_{\mathrm{rec}}=\|s-\hat{s}\|^2$ is the spectrogram reconstruction loss, $\mathcal{L}_{\mathrm{KL}}$ is the slight KL-penalty loss[^48], and $\mathcal{L}_{\mathrm{Adv}}$ is the LSGAN-styled adversarial loss[^49].
+The training loss of the speech compression model can be formulated as
+$$
+\mathcal{L} = \mathcal{L}_{\mathrm{rec}} + \mathcal{L}_{\mathrm{KL}} + \mathcal{L}_{\mathrm{Adv}}
+$$
+
+where $\mathcal{L}_{\mathrm{rec}}=\|s-\hat{s}\|^2$ is the spectrogram reconstruction loss, $\mathcal{L}_{\mathrm{KL}}$ is the slight KL-penalty loss[^48], and $\mathcal{L}_{\mathrm{Adv}}$ is the LSGAN-styled adversarial loss[^49].
 After training, a one-second speech clip can be encoded into 25 vector frames.
-For more details, please refer to Appendix~\ref{app:model_config} and~\ref{app:evaluation_speech_compression}.
+For more details, please refer to [Appendix A.1](#Appenidx_A1) and [A.5](#Appendix_A5).
 
 </td><td>
+
+**WaveVAE**
+
+如图 01 (a) 所示, 给定语音波形 $s$, VAE 编码器 $E$ 将 $s$ 编码为隐变量 $z$, 波形解码器 $D$ 重构波形 $x = D(z) = D(E(s))$.
+为了减少模型的计算负担和简化语音-文本对齐学习, 编码器 $E$ 按比例 $d$ 下采样语音波形.
+编码器 $E$ 类似 **WavTokenizer**[^45] 的编码器, 解码器 $D$ 基于 **HiFi-GAN**[^46].
+我们还采用多周期判别器 MPD, 多尺度判别器 MSD, 多分辨率判别器 MRD (**HiFi-GAN**[^46], **UnivNet**[^47]) 来建模波形中的高频细节, 确保感知上高质量的重构.
+
+语音压缩模型的训练损失可以形式化为:
+$$
+\mathcal{L} = \mathcal{L}_{\mathrm{rec}} + \mathcal{L}_{\mathrm{KL}} + \mathcal{L}_{\mathrm{Adv}}
+$$
+
+- $\mathcal{L}_{\mathrm{rec}}=\|s-\hat{s}\|^2$ 是频谱图重构损失,
+- $\mathcal{L}_{\mathrm{KL}}$ 是轻微的 KL 惩罚损失[^48],
+- $\mathcal{L}_{\mathrm{Adv}}$ 是 LSGAN 型的对抗损失[^49].
+
+在训练后, 一秒语音片段可以编码器 25 个向量帧.
+更多细节, 请阅读[附录 A.1](#Appenidx_A1) 和 [A.5](#Appendix_A5).
 
 </td></tr>
 <tr><td>
@@ -180,9 +208,31 @@ $$
 $$
 
 where $t\in[0,1]$ denotes time and $v$ is the drift force.
-Equation~\ref{eq:1} converts $Z_{0}$ from $\pi_{0}$ to $Z_{1}$ from $\pi_{1}$.
+Equation.01 converts $Z_{0}$ from $\pi_{0}$ to $Z_{1}$ from $\pi_{1}$.
 The drift force $v$ drives the flow to follow the direction $(Z_{1}-Z_{0})$.
-The latent diffusion transformer,  parameterized by $\theta$, can be trained by estimating $v(Z_{t}, t)$ with $v_{\theta}(Z_{t}, t)$ through minimizing the least squares loss with respect to the line directions $(Z_{1}-Z_{0})$:
+
+</td><td>
+
+**Latent Diffusion Transformer with Masked Speech Modeling**
+
+潜在扩散 Transformer 用于预测语音, 需要匹配给定说话人的风格和提供的文本内容.
+给定从标准高斯分布 $\pi_{0}$ 采样的随机变量 $Z_0$ 和由语音压缩模型给定的潜在空间中采样的 $Z_1$, 其数据密度为 $\pi_{1}$, 我们采用 Rectified Flow[^50] 来隐式学习传输映射 $T$, 即 $Z_1 := T(Z_0)$.
+
+Rectified Flow 通过构造如下常微分方程 (ODE) 来学习 $T$:
+$$
+\mathrm{d}Z_t = v(Z_t, t)\,\mathrm{d}t,
+$$
+
+- $t\in[0,1]$ 表示时间,
+- $v$ 是漂移力.
+
+上述方程将来自 $\pi_{0}$ 的 $Z_{0}$ 转换为来自 $\pi_{1}$ 的 $Z_{1}$.
+漂移力 $v$ 驱动流沿着方向 $(Z_{1}-Z_{0})$ 前进.
+
+</td></tr>
+<tr><td>
+
+The latent diffusion transformer, parameterized by $\theta$, can be trained by estimating $v(Z_{t}, t)$ with $v_{\theta}(Z_{t}, t)$ through minimizing the least squares loss with respect to the line directions $(Z_{1}-Z_{0})$:
 $$
 \min_v \int_0^1 \mathbb{E} \left[ \| (Z_1 - Z_0) - v(Z_t, t) \|^2 \right] \, \mathrm{d}t.
 $$
@@ -194,6 +244,18 @@ The loss is calculated using only the masked region $z_{target}$.
 ***MegaTTS3*** learns the average pronunciation from $p$ and the specific characteristics such as timbre, accent, and prosody of the corresponding speaker from $z_{prompt}$.
 
 </td><td>
+
+潜在扩散 Transformer, 由 $\theta$ 参数化, 通过 $v_{\theta}(Z_{t}, t)$ 估计 $v(Z_{t}, t)$ 来训练, 最小化以下关于线方向 $(Z_{1}-Z_{0})$ 的最小二乘损失:
+$$
+\min_v \int_0^1 \mathbb{E} \left[ \| (Z_1 - Z_0) - v(Z_t, t) \|^2 \right] \, \mathrm{d}t.
+$$
+
+我们使用来自 **LLAMA3**[^51] 的标准 Transformer 块作为 ***MegaTTS3*** 的基本结构, 并采用 **RoPE**[^52] 作为位置嵌入.
+
+在训练时, 我们将潜在向量序列随机划分为提示区域 $z_{prompt}$ 和掩码目标区域 $z_{target}$, 其中 $z_{prompt}$ 的比例为 $\gamma \sim U(0.1, 0.9)$.
+我们使用 $v_{\theta}$ 来预测掩码目标向量 $\hat{z}_{target}$ 条件于 $z_{prompt}$ 和音素嵌入 $p$, 记为 $v_{\theta}(\hat{z}_{target}|z_{prompt}, p)$.
+损失仅计算掩码区域 $z_{target}$.
+***MegaTTS3*** 学习来自 $p$ 的平均发音, 以及来自 $z_{prompt}$ 的对应说话人的特点, 如声调, 口音, 语调等.
 
 </td></tr></table>
 
@@ -288,7 +350,7 @@ We select the guidance scale $\alpha_{spk}$ and $\alpha_{txt}$ based on experime
 <table><tr><td width="50%">
 
 In this subsection, we describe the datasets, training, inference, and evaluation metrics.
-We provide the model configuration and detailed hyper-parameter setting in Appendix~\ref{app:model_config}.
+We provide the model configuration and detailed hyper-parameter setting in Appendix A.1..
 
 </td><td>
 
@@ -313,7 +375,7 @@ We utilize three benchmark datasets:
 **Training and Inference**
 
 We train the WaveVAE model and ***MegaTTS3*** on 8 NVIDIA A100 GPUs.
-The batch sizes, optimizer settings, and learning rate schedules are described in Appendix~\ref{app:model_config}.
+The batch sizes, optimizer settings, and learning rate schedules are described in Appendix A.1..
 It takes 2M steps for the WaveVAE model's training and 1M steps for ***MegaTTS3***'s training until convergence.
 The pre-training of ***MegaTTS3*** requires 800k steps and PeRFlow distillation requires 200k steps.
 
@@ -502,6 +564,8 @@ Due to space constraints, further discussions are provided in the appendix.
 
 #### Model Configuration
 
+<a id="Appenidx_A1"></a>
+
 - **The WaveVAE model** consists of a VAE encoder, a wave decoder, and discriminators;
 The VAE encoder follows the architecture used in **WavTokenizer**[^45].
 The wave decoder consists of a convolutional upsampler and a **HiFi-GAN** decoder[^46].
@@ -527,6 +591,8 @@ In accented TTS experiments, we set $\alpha_{spk}=6.5$, $\alpha_{txt}=1.5$ to ge
 
 #### Random Seeds
 
+<a id="Appenidx_A2"></a>
+
 We ran objective experiments 10 times with 10 different random seeds and obtained the averaged results.
 The chosen random seeds are [4475, 5949, 6828, 6744, 3954, 3962, 6837, 1237, 3824, 3163].
 
@@ -537,6 +603,8 @@ The chosen random seeds are [4475, 5949, 6828, 6744, 3954, 3962, 6837, 1237, 382
 
 #### Sampling Strategy
 
+<a id="Appenidx_A3"></a>
+
 For MegaTTS 3, we applied the Euler sampler with a fixed step size following the common practice in flow ODE sampling.
 We use 25 and 8 sampling steps for \textit{MegaTTS 3} and \textit{MegaTTS 3-accelerated}, respectively.
 
@@ -546,6 +614,8 @@ We use 25 and 8 sampling steps for \textit{MegaTTS 3} and \textit{MegaTTS 3-acce
 <tr><td>
 
 #### Details about Zero-Shot TTS Baselines
+
+<a id="Appenidx_A4"></a>
 
 In this subsection, we provide the details about the baselines in our zero-shot TTS experiments:
 
@@ -586,6 +656,8 @@ RTF denotes the real-time factor, i.e., the seconds required for the system (tog
 
 #### Details about the Accented TTS Baseline
 
+<a id="Appenidx_A5"></a>
+
 CTA-TTS[^44] is a TTS framework that uses a phoneme recognition model to quantify the accent intensity in phoneme level for accent intensity control.
 CTA-TTS first trains the phoneme recognition model on the standard pronunciation LibriSpeech dataset, and then uses the output probability distribution of the model to assess the accent intensity and create accent labels on the accented L2Arctic dataset.
 These labels were input into the TTS model to enable control over accent intensity.
@@ -600,6 +672,8 @@ Therefore, we directly compare the zero-shot results of our model with the basel
 <tr><td>
 
 #### Details in Subjective Evaluations
+
+<a id="Appenidx_A6"></a>
 
 We conduct evaluations of audio quality, speaker similarity, and accent similarity on Amazon Mechanical Turk (MTurk).
 We inform the participants that the data will be utilized for scientific research purposes.
@@ -623,6 +697,8 @@ We paid \$8 to participants hourly and totally spent about \$500 on participant 
 
 ### B·Classifier-Free Guidance Used in Zero-Shot TTS
 
+<a id="Appenidx_B"></a>
+
 <table><tr><td width="50%">
 
 Classifier-Free Guidance (CFG)[^54] is a technique that balances sample fidelity and mode coverage in diffusion models by combining the score estimates from both a conditional and an unconditional model.
@@ -637,6 +713,8 @@ However, this work is limited to improving the audio quality of TTS and does not
 </td></tr></table>
 
 ### C·Details of PeRFlow Training Procedure
+
+<a id="Appenidx_C"></a>
 
 <table><tr><td width="50%">
 
@@ -653,6 +731,8 @@ We set $T$ to 25 and $\widehat{T}$ to 8, achieving a non-negligible acceleration
 </td></tr></table>
 
 ### D·Details about Data and Model Scaling Experiments
+
+<a id="Appenidx_D"></a>
 
 <table><tr><td width="50%">
 
@@ -723,6 +803,8 @@ Additionally, we find that increasing the model parameters enhances its para-lin
 
 ### E·Duration Controllability of MegaTTS3
 
+<a id="Appenidx_E"></a>
+
 <table><tr><td width="50%">
 
 In this section, we aim to verify MegaTTS 3's duration control capabilities through case studies.
@@ -739,6 +821,8 @@ The figure shows that our MegaTTS 3 also exhibits good fine-grained phoneme-leve
 
 ### F·Visualization of Attention Matrices
 
+<a id="Appenidx_F"></a>
+
 <table><tr><td width="50%">
 
 We visualize the attention matrices from all layers in the 1.4B MegaTTS 3 model, using 8 sampling steps.
@@ -754,6 +838,8 @@ As shown in Figure~\ref{app:vis_attn} (a), the bottom layers handle text and aud
 
 ### G·About Different Lengths of Context
 
+<a id="Appenidx_G"></a>
+
 <table><tr><td width="50%">
 
 An imbalanced distribution of prompt and target lengths during training can lead to unstable generation performance during inference.
@@ -767,6 +853,8 @@ Although we do not use this strategy in our experiments in order to make a fair 
 </td></tr></table>
 
 ### H·Experiments of Prosodic Naturalness for Zero-Shot TTS
+
+<a id="Appenidx_H"></a>
 
 <table><tr><td width="50%">
 
@@ -785,6 +873,8 @@ The results in Table~\ref{table:expressiveness_exp_libritest_all} show that spar
 
 ### I·Experiments with Longer Samples
 
+<a id="Appenidx_I"></a>
+
 <table><tr><td width="50%">
 
 To directly compare MegaTTS 3's robustness to long sequences against other AR models, we have conducted experiemnts for a test set with longer samples.
@@ -799,6 +889,8 @@ As shown, compared to the baseline systems, MegaTTS 3 does not exhibit a signifi
 </td></tr></table>
 
 ### J·Experiments with Hard Sentences
+
+<a id="Appenidx_J"></a>
 
 <table><tr><td width="50%">
 
@@ -815,6 +907,8 @@ Based on the results presented in Table~\ref{table:cmp_hard_sentences}, our mode
 
 ### K·Additional Details for Multi-Condition CFG
 
+<a id="Appenidx_K"></a>
+
 <table><tr><td width="50%">
 
 In Section~\ref{method:sec_3_2}, regarding the multi-condition CFG technique, the experimental setup for the preliminary experiment for accent control is: fixing $\alpha_{spk}$ at 2.5 and varying $\alpha_{txt}$ from 1.0 to 6.0.
@@ -829,6 +923,8 @@ The values reported here are specific to the model used in our experiments.
 </td></tr></table>
 
 ### L·Ethics Statement
+
+<a id="Appenidx_L"></a>
 
 <table><tr><td width="50%">
 
@@ -846,10 +942,12 @@ By addressing these ethical concerns, we aim to contribute to the development of
 
 ### M·Reproducibility Statement
 
+<a id="Appenidx_M"></a>
+
 <table><tr><td width="50%">
 
 We have taken several steps to ensure the reproducibility of the experiments and results presented in this paper:
-(1) the architecture and algorithm of the MegaTTS 3 model are described in Section~\ref{method} and and relevant hyperparameters are fully described in Appendix~\ref{app:model_config};
+(1) the architecture and algorithm of the MegaTTS 3 model are described in Section~\ref{method} and and relevant hyperparameters are fully described in Appendix A.1.;
 (2) The evaluation metrics, including WER, SIM-O, MCD (dB), the moments of the pitch distribution, alignment error, CMOS, SMOS, and ASMOS, are described in detail in Section~\ref{Experimental_Setup};
 (3) For most of the key experiments, we utilize publicly available datasets such as LibriLight, LibriSpeech, and L2Arctic.
 The selection of the test sets is identical to that used in previous zero-shot TTS research.
